add-style-handlers-to-swagger
